# chrisbratti-website

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  dockerfile  test.html
,github/workflows/: main.yml  rust.yml
.github/workflows/: docker.yml  rust.yml
src/: app.rs  lib.rs  main.rs  middleware.rs  server_functions.rs
src/oauth/: mod.rs  oauth_client.rs
src/routes/: mod.rs  resume_routes.rs
src/services/: mod.rs  resume_parsing_service.rs
style/: main.scss
